# NavigationApp

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt  main.cpp  nodesINIT.txt  waysInit.txt
App/include/: EdgeClass.hpp  GeoUtils.hpp  KDTreeClass.hpp  MapClass.hpp  NodeClass.hpp  types.hpp
App/src/: EdgeClass.cpp  KDTreeClass.cpp  MapClass.cpp  NodeClass.cpp
Parser/: CMakeLists.txt  ParserMain.cpp
Parser/OSM/: Nodes.txt  Ways.txt
Parser/include/: ObjectExtraction.hpp  ParserHandler.hpp  Utilities.hpp
Parser/src/: ObjectExtraction.cpp  ParserHandler.cpp
